# A100-Kernel-RL

./: .gitignore  Dockerfile  PRD_v1.3_KernelForge_OpenEnv.md  README.md  docker-compose.yml  modal_app.py  modal_train.py  openenv.yaml  pyproject.toml  requirements.txt  skill_a100.md
.github/workflows/: test.yml
archive/datasets_legacy/: baselines.jsonl  compute_baselines.py  curated_200.jsonl  doublegraph_a100_kernels.jsonl  doublegraph_grpo_prompts.jsonl
archive/research_legacy/: RL_DATASET_INDEX.md  SKILLS.md  doublegraph_a100_dataset_formats.md  doublegraph_a100_dataset_full_details.md  doublegraph_a100_manifest.csv
configs/: scaling_ladder.json
datasets/: build_combined_dataset.py  combined_kernelforge.jsonl  curate_subset.py  doublegraph_sft.jsonl  download_ops6k.py  extract_doublegraph_a100.py  generate_wcc_dataset.py  integrity.py  wcc_training.jsonl
demo/: streamlit_demo.py
docs/: ALPHXIV_CONVO_1.md  CLAUDE.md  EVIDENCE_REFERENCES.md  GRPO_DEEP_DIVE.md  HACKATHON_RL_ENV_SINGLE_SOURCE_NOTES.md  KERNELFORGE_A100_ADDENDUM.md  KERNELFORGE_FINAL_PRD.md  KERNELFORGE_HACKATHON_GUIDE.md  KERNELFORGE_RL_ENVIRONMENT.md  KERNELFORGE_SPEC.md  KernelForge_Implementation_Spec.md  KernelForge_PRD_v3.md  KernelForge_PRD_v4.md  KernelForge_Truth.md  OPENENV_AUDIT_PLAN_1.md  OPENENV_AUDIT_PLAN_2.md  OPENENV_AUDIT_PLAN_3.md  README.md  STATUS.md  SYSTEM_TRUTH.md  review_qwen35_2b_distilled.md
docs/archive/: KERNELFORGE_PRD.md  KERNELFORGE_SPAN.md  KernelForge_ARCH_TASKS.md  KernelForge_Implementation_Spec.md  KernelForge_PRD_v5.md  TRAINING_PLAN.md
docs/archive/research/: A100_OPTIMIZATION_STRATEGIES.md  CUDA_AGENT_DEEP_DIVE.md
docs/research/: KERNELFORGE_COMPARISON.md  MARS_CREDIT_ASSIGNMENT.md  MULTI_TURN_RL_TECHNIQUES.md  README.md  WARPSPEED_ARCHITECTURE.md
docs/research/doublegraph/: doublegraph_a100_dataset_formats.md  doublegraph_a100_manifest.jsonl
docs/skills/: CLAUDE.md  CUDA_AGENT.md  KERNELGYM_DR_KERNEL.md  SIMPLY_DEEPMIND.md  SKYDISCOVER.md  SKYDISCOVER_ADAEVOLVE_ADAX.md  doublegraph_a100.md
eval_service/: Dockerfile  __init__.py  app.py  eval_core.py
evaluation/: CLAUDE.md  __init__.py  ablation.py  compare_stages.py  compiler.py  eval_model.py  pass_at_k.py  profiler.py  reward_monitor.py  sandbox.py  verifier.py
kernels/: baseline_wcc.cu  clustered_wcc_h100.cu  ecl_cc_h100.cu
notebooks/: kernelforge_training.ipynb
openenv_env/: CLAUDE.md  __init__.py  anti_hack.py  cache_pool.py  client.py  eval_backend.py  gpu_registry.py  kernel_forge_env.py  models.py  reward.py  skill_builder.py  task_pool.py  task_routing.py
openenv_env/server/: app.py
scripts/: build_docs_span.py  compare_results.py  modal_setup.py  run_benchmark.py  run_comparison.py  run_pipeline.py  smoke_test.py  test_modal_eval.py
skydiscover_integration/: adaevolve.py  evaluator.py  evox_strategies.py  run_evolution.sh
skydiscover_integration/initial_kernels/: bfs_power_law.cu  louvain_community.cu  pagerank_dense.cu  triangle_count.cu  wcc_doublegraph.cu
tasks/: build_task_pool.py
tests/: conftest.py  test_anti_hack.py  test_cache_pool.py  test_compile.py  test_curriculum.py  test_env.py  test_gpu_registry.py  test_multi_turn_rollout.py  test_pac_verify.py  test_pass_at_k.py  test_reward.py  test_reward_monitor.py  test_skill_builder.py
training/: CLAUDE.md  cuda_agent_integration.py  curriculum.py  custom_grpo_trainer.py  dataset_loader.py  grpo_train.py  model_loader.py  multi_turn_rollout.py  rft_filter.py  run_metadata.py  stage1_warmup.py  stage2_rft.py  stage3_grpo.py  task_support.py
verification/: pac_verify.py  profile.py
